fiz overflow bug

--- a/app/components/TruncateTools/TruncateTools.module.scss
+++ b/app/components/TruncateTools/TruncateTools.module.scss
@@ -72,7 +72,7 @@
 .tooltip:hover .tooltip_text {
   position: absolute;
   visibility: visible;
-  transition: 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
   opacity: 1;
   transform: translateY(-100%);
 }
